Add "phplint" using composer
Change-Id: Ib880531e3a210d96ea40aeb6bbaafb98411076bd

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 PrivateSettings.php 
 ExtensionMessageFiles.php
+
+# Building & testing
+/composer.lock
+/docs
+/node_modules
+/vendor
+
+# Operating systems
+## Mac OS X
+.DS_Store
+## Windows
+Thumbs.db
