--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ["www.gofundme.com/f/7uj22x-help-miraheze-stay-online", "paypal.me/mirahezelimited"]
+custom: ["paypal.me/mirahezelimited"]
