--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,28 +20,35 @@ jobs:
       - name: Run tests
         run: |
           bash phplint.sh
-      - name: The build has passed
-        uses: rectalogic/notify-irc@v1
-      - uses: technote-space/workflow-conclusion-action@v2
-        if: ${{ env.WORKFLOW_CONCLUSION }} == 'success'
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
-          message: |
-            ${{ github.actor }} the build has passed
-      - name: The build has failed
-        uses: rectalogic/notify-irc@v1
-        if: ${{ failure() }}
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
-          message: |
-            ${{ github.actor }} the build has failed
-      - name: The build has been cancelled
-        uses: rectalogic/notify-irc@v1
-        if: ${{ cancelled() }}
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
-          message: |
-            ${{ github.actor }} the build has been cancelled
+
+  irc:
+        name: IRC Notifications
+        needs: build
+        runs-on: ubuntu-latest
+        if: ${{ always() }}
+        steps:
+          - uses: technote-space/workflow-conclusion-action@v2
+          - uses: rectalogic/notify-irc@v1
+          - name: The build has passed
+            if: env.WORKFLOW_CONCLUSION == 'success' || env.WORKFLOW_CONCLUSION == 'failure' || env.WORKFLOW_CONCLUSION == 'cancelled'
+            with:
+              channel: "#mediawiki-cosmos"
+              nickname: miraheze-github-notifier
+              message: |
+                ${{ github.actor }} the build has ${{ env.WORKFLOW_CONCLUSION }}
+          - name: The build has failed
+          - uses: rectalogic/notify-irc@v1
+            if: ${{ failure() }}
+            with:
+              channel: "#mediawiki-cosmos"
+              nickname: miraheze-github-notifier
+              message: |
+                ${{ github.actor }} the build has failed
+          - name: The build has been cancelled
+          - uses: rectalogic/notify-irc@v1
+            if: ${{ cancelled() }}
+            with:
+              channel: "#mediawiki-cosmos"
+              nickname: miraheze-github-notifier
+              message: |
+                ${{ github.actor }} the build has been cancelled
