--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,7 @@ jobs:
       - name: Run tests
         run: |
           bash phplint.sh
-
-  irc:
+  notify:
         needs: build
         runs-on: ubuntu-latest
         if: ${{ always() }}
@@ -35,3 +34,19 @@ jobs:
               nickname: miraheze-github-notifier
               message: |
                 ${{ github.actor }} the build has ${{ env.WORKFLOW_CONCLUSION }}
+          - name: The build has failed
+            uses: rectalogic/notify-irc@v1
+            if: ${{ failure() }}
+            with:
+              channel: "#mediawiki-cosmos"
+              nickname: miraheze-github-notifier
+              message: |
+                ${{ github.actor }} the build has failed
+          - name: The build has been cancelled
+            uses: rectalogic/notify-irc@v1
+            if: ${{ cancelled() }}
+            with:
+              channel: "#mediawiki-cosmos"
+              nickname: miraheze-github-notifier
+              message: |
+                ${{ github.actor }} the build has been cancelled
