--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,33 +21,34 @@ jobs:
         run: |
           bash phplint.sh
   notify:
-    name: IRC notifications
     needs: build
     runs-on: ubuntu-latest
     if: ${{ always() }}
     steps:
-      - name: The build has passed
+      - name: success
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
         if: ${{ env.WORKFLOW_CONCLUSION }} == 'success'
         with:
           channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
+          nickname: miraheze-github
           message: |
-            ${{ github.actor }} the build has ${{ env.WORKFLOW_CONCLUSION }}
-      - name: The build has failed
-        uses: rectalogic/notify-irc@v1
-        if: ${{ failure() }}
+            ${{ github.repository }} - ${{ github.actor }} The build passed. ${{ github.event_path }}
+      - name: failure
+        uses: technote-space/workflow-conclusion-action@v2
+      - uses: rectalogic/notify-irc@v1
+        if: ${{ env.WORKFLOW_CONCLUSION }} == 'failure'
         with:
           channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
+          nickname: miraheze-github
           message: |
-            ${{ github.actor }} the build has failed
-      - name: The build has been cancelled
-        uses: rectalogic/notify-irc@v1
-        if: ${{ cancelled() }}
+            ${{ github.actor }} the build has errored.
+      - name: cancelled
+        uses: technote-space/workflow-conclusion-action@v2
+      - uses: rectalogic/notify-irc@v1
+        if: ${{ env.WORKFLOW_CONCLUSION }} == 'cancelled'
         with:
           channel: "#mediawiki-cosmos"
-          nickname: miraheze-github-notifier
+          nickname: miraheze-github
           message: |
-            ${{ github.actor }} the build has been cancelled
+            ${{ github.actor }} the build has been cancelled.
