--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,27 +28,27 @@ jobs:
       - name: success
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
-        if: ${{ env.WORKFLOW_CONCLUSION }} === 'success'
+        if: env.WORKFLOW_CONCLUSION == 'success'
         with:
           channel: "#mediawiki-cosmos"
           nickname: miraheze-github
           message: |
-            ${{ github.repository }} - ${{ github.actor }} The build passed. ${{ github.event.html_url }}
+            ${{ github.repository }} - ${{ github.actor }} The build passed.
       - name: failure
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
-        if: ${{ env.WORKFLOW_CONCLUSION }} === 'failure'
+        if: env.WORKFLOW_CONCLUSION == 'failure'
         with:
           channel: "#mediawiki-cosmos"
           nickname: miraheze-github
           message: |
-            ${{ github.actor }} the build has errored.
+            ${{ github.repository }} - ${{ github.actor }} the build has errored.
       - name: cancelled
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
-        if: ${{ env.WORKFLOW_CONCLUSION }} === 'cancelled'
+        if: env.WORKFLOW_CONCLUSION == 'cancelled'
         with:
           channel: "#mediawiki-cosmos"
           nickname: miraheze-github
           message: |
-            ${{ github.actor }} the build has been cancelled.
+            ${{ github.repository }} - ${{ github.actor }} the build has been cancelled.
