--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  build-create:
+  build:
     if: github.event_name == 'create'
     runs-on: ubuntu-latest
     strategy:
@@ -21,72 +21,3 @@ jobs:
       - name: Run tests
         run: |
           bash phplint.sh
-  build-push:
-    if: github.event_name == 'push'
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php: ['7.3']
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: PHP ${{ matrix.php }} 
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }} 
-      - name: Run tests
-        run: |
-          bash phplint.sh
-  build-pull_request:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php: ['7.3']
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: PHP ${{ matrix.php }} 
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }} 
-      - name: Run tests
-        run: |
-          bash phplint.sh
-  notify-irc:
-    needs:
-      - build-create
-      - build-push
-      - build-pull_request
-    runs-on: ubuntu-latest
-    if: ${{ always() }}
-    steps:
-      - name: success
-        uses: technote-space/workflow-conclusion-action@v2
-      - uses: rectalogic/notify-irc@v1
-        if: env.WORKFLOW_CONCLUSION == 'success'
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} The build passed.
-      - name: failure
-        uses: technote-space/workflow-conclusion-action@v2
-      - uses: rectalogic/notify-irc@v1
-        if: env.WORKFLOW_CONCLUSION == 'failure'
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} the build has errored.
-      - name: cancelled
-        uses: technote-space/workflow-conclusion-action@v2
-      - uses: rectalogic/notify-irc@v1
-        if: env.WORKFLOW_CONCLUSION == 'cancelled'
-        with:
-          channel: "#mediawiki-cosmos"
-          nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} the build has been cancelled.
