--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - uses: lewagon/wait-on-check-action@master
+        with:
+          ref: test
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 5
       - name: PHP ${{ matrix.php }} 
         uses: shivammathur/setup-php@v2
         with:
@@ -26,10 +31,6 @@ jobs:
     if: ${{ always() }}
     steps:
       - name: success
-        uses: lewagon/wait-on-check-action@master
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 5
       - uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
         if: env.WORKFLOW_CONCLUSION == 'success'
