--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,12 @@
 name: Continuous integration
 on:
   create:
+    branches: 'Universal-Omega/*'
   push:
+    branches: 'Universal-Omega/*'
   pull_request:
     types: [created]
+    branches: 'Universal-Omega/*' 
 
 jobs:
   build:
