--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,9 +2,8 @@ name: Continuous integration
 on:
   create:
   push:
-    types: '!created'
   pull_request:
-    types: 'created'
+    types: [created]
 
 jobs:
   build:
