--- a/.github/workflows/notify-irc.yml
+++ b/.github/workflows/notify-irc.yml
@@ -2,10 +2,10 @@ name: notify-irc
 on:
   workflow_run:
     workflows: ["Continuous integration"]
+    types: completed
 
 jobs:
   notify-irc:
-    needs: build
     runs-on: ubuntu-latest
     if: github.repository_owner == 'Universal-Omega'
     steps:
