add additional checks so that irc notifications is usually just given once and so they are not shown in our irc feed from forks.

--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -1,12 +1,9 @@
 name: Continuous integration
 on:
   create:
-    branches: 'Universal-Omega/*'
   push:
-    branches: 'Universal-Omega/*'
   pull_request:
-    types: [created]
-    branches: 'Universal-Omega/*' 
+    types: opened
 
 jobs:
   build:
@@ -28,7 +25,7 @@ jobs:
   notify-irc:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ always() }}
+    if: github.repository_owner == 'miraheze'
     steps:
       - name: success
         uses: technote-space/workflow-conclusion-action@v2
