--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -33,7 +33,7 @@ jobs:
         if: env.WORKFLOW_CONCLUSION == 'success'
         with:
           channel: "#miraheze"
-          nickname: miraheze-github_
+          nickname: miraheze-github
           message: |
             ${{ github.repository }} - ${{ github.actor }} The build passed.
       - name: failed
@@ -42,7 +42,7 @@ jobs:
         if: env.WORKFLOW_CONCLUSION == 'failure'
         with:
           channel: "#miraheze"
-          nickname: miraheze-github_
+          nickname: miraheze-github
           message: |
             ${{ github.repository }} - ${{ github.actor }} the build has errored.
       - name: cancelled
@@ -51,6 +51,6 @@ jobs:
         if: env.WORKFLOW_CONCLUSION == 'cancelled'
         with:
           channel: "#miraheze"
-          nickname: miraheze-github_
+          nickname: miraheze-github
           message: |
             ${{ github.repository }} - ${{ github.actor }} the build has been cancelled.
