--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -25,7 +25,7 @@ jobs:
   notify-irc:
     needs: build
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'miraheze'
+    if: ${{ always() }}
     steps:
       - name: succeeded
         uses: technote-space/workflow-conclusion-action@v2
