--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -34,8 +34,7 @@ jobs:
         with:
           channel: "#miraheze"
           nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} The build passed.
+          message: ${{ github.repository }} - ${{ github.actor }} The build passed.
       - name: failed
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
@@ -43,8 +42,7 @@ jobs:
         with:
           channel: "#miraheze"
           nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} the build has errored.
+          message: ${{ github.repository }} - ${{ github.actor }} the build has errored.
       - name: cancelled
         uses: technote-space/workflow-conclusion-action@v2
       - uses: rectalogic/notify-irc@v1
@@ -52,5 +50,4 @@ jobs:
         with:
           channel: "#miraheze"
           nickname: miraheze-github
-          message: |
-            ${{ github.repository }} - ${{ github.actor }} the build has been cancelled.
+          message: ${{ github.repository }} - ${{ github.actor }} the build has been cancelled.
